@@ -1,4 +1,2 @@
 id=52525252
-type=flowiq2200
 name=MyWater
-key=
