@@ -1,4 +1,4 @@
 id=86868686
-type=weh_07
+type=auto
 name=Vatten
 key=
